<resources>
    <string name="app_name">Chitaloid</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_text_view">DUMMY\nCONTENT</string>
    <string name="title_activity_exercise_settings">Параметры упражнения</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="exercise_settings_title">Настройки</string>
    <string name="exercise_settings_font_size_label">Размер шрифта</string>
    <string name="ok">ОК</string>
    <string name="exercise_menu_title">Меню</string>
    <string name="exercise_settings_speed_label">Скорость</string>
    <string name="title_activity_pupil_statistics">PupilStatisticsActivity</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Создать аккаунт</string>
    <string name="i_am_a_teacher">Я учитель</string>
    <string name="app_title">Читалоид</string>
    <string name="manage_account_title">Управление аккаунтами</string>
    <string name="exercise_selection_title">Упражнения</string>
    <string name="pupil_statistic_title">Статистика</string>
    <string name="quit_pupil_title">Выйти из учетной записи</string>
    <string name="pupil_welcome_title">Добро пожаловать, %1$s!</string>
    <string name="pupil_selection_confirmation">Выбрать пользователя %1$s?</string>
    <string name="cancel">отмена</string>
    <string name="create_pupil_title">Создание нового пользователя</string>
    <string name="create_pupil_input_hint">Имя</string>
    <string name="pupil_options_title">Опции</string>
    <string name="show_statistic_title">Показать статистику</string>
    <string name="delete_statistic_title">Удалить статистику</string>
    <string name="delete_pupil_title">Удалить аккаунт</string>
    <string name="no_pupils_found">Нет зарегистрированных пользователей</string>
    <string name="name_is_too_short">Слишком короткое имя пользователя</string>
    <string name="name_is_already_taken">Пользователь с таким именем уже существует</string>
</resources>
