<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="5dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <Button
            android:text="@string/show_statistic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/show_statistic_btn"/>
    <Button
            android:text="@string/delete_statistic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/delete_statistic_btn"/>
    <Button
            android:text="@string/delete_pupil_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/delete_pupil_btn"/>
</LinearLayout>