<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
            android:text="@string/pupil_selection_confirmation"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:layout_height="wrap_content" android:id="@+id/sign_in_confirmation_textView"
            android:textSize="18sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/oval_button_gray"
                android:layout_height="wrap_content" android:id="@+id/sign_in_cancel_btn"
                />
        <Button
                android:text="@string/ok"
                android:layout_width="match_parent"
                android:background="@drawable/oval_button_green"
                android:layout_height="wrap_content" android:id="@+id/sign_in_ok_btn"/>
    </LinearLayout>
</LinearLayout>