<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:orientation="vertical" android:id="@+id/linearLayout3">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/app_title"
                android:textAlignment="center"
                android:gravity="center"
                android:textAllCaps = "true"
                android:textColor="@color/colorFunkyPrimaryGray"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textSize="36sp" app:fontFamily="sans-serif-black" android:typeface="normal"
                tools:text="ЧИТАЛОИД"

                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:srcCompat="@drawable/robot_6" android:id="@+id/imageView2"
                android:adjustViewBounds="true" android:cropToPadding="false" android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="130dp"
                android:layout_marginRight="130dp" android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        >
            <Button
                    android:text="@string/sign_in"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/oval_button_green"
                    android:id="@+id/sign_in_btn"
            />
            <Button
                    android:text="@string/sign_up"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/oval_button_red"
                    android:id="@+id/sign_up_btn"
            />
            <Button
                    android:text="@string/i_am_a_teacher"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/oval_button_purple"
                    android:id="@+id/i_am_a_teacher_btn"
            />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
